updating name details in config and home page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Waste Exemptions Renewals Prototype
+  Waste carrier or broker prototype
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
