--- a/app/views/v1/your-registration/choose-country.html
+++ b/app/views/v1/your-registration/choose-country.html
@@ -21,70 +21,90 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <!--<form action="choosing-organisation" method="post" class="form">-->
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset govuk-!-margin-bottom-9">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-2">
-                Where is your principal place of business?
-              </h1>
-            </legend>
-            <details class="govuk-details" data-module="govuk-details">
-              <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                  What is the principal place of business?
-                </span>
-              </summary>
-              <div class="govuk-details__text">
-                For companies and LLPs this is where your business is registered. For others, this is where the day-to-day business is run.
-              </div>
-            </details>
-            <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset">
+
+      <form action="{{formAction}}" method="post">
+
+                <div class="govuk-form-group">
+
+                    <fieldset class="govuk-fieldset">
+
+                              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                                <h1 class="govuk-fieldset__heading">
+                                  Where is your principal place of business?
+                                </h1>
+                              </legend>
+
+
+                                <details class="govuk-details" data-module="govuk-details">
+                                    <summary class="govuk-details__summary">
+                                        <span class="govuk-details__summary-text">
+                                          What is the principal place of business?
+                                        </span>
+                                    </summary>
+                                        <div class="govuk-details__text">
+                                          For companies and LLPs this is where your business is registered. For others, this is where the day-to-day business is run.
+                                        </div>
+                                </details>
+                    </fieldset>
+                    
+         <fieldset class="govuk-fieldset">
                 <!--<legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                   <h1 class="govuk-fieldset__heading">
                     Where do you live?
                   </h1>
                 </legend>-->
-                <div class="govuk-radios">
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                      England
-                    </label>
-                  </div>
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                      Wales
-                    </label>
-                  </div>
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-                      Scotland
-                    </label>
-                  </div>
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-                      Northern Ireland
-                    </label>
-                  </div>
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-                      Not in the United Kingdom
-                    </label>
-                  </div>
-                </div>
-              </fieldset>
+              <div class="govuk-radios">
+
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+                        England
+                      </label>
+                    </div>
+
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="wales">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                        Wales
+                      </label>
+                    </div>
+
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="scotland">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+                        Scotland
+                      </label>
+                    </div>
+
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+                        Northern Ireland
+                      </label>
+                    </div>
+
+                    <div class="govuk-radios__item">
+                      <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="not-uk">
+                      <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+                        Not in the United Kingdom
+                      </label>
+                    </div>
+
+              </div>
+
+          </fieldset>
+        </div>
+
+            <br/>
+
+            <div class="govuk-form-group">
+              {{ govukButton({
+                  text: "Continue"
+                }) }}
             </div>
-            <br />
-              <button class="govuk-button" data-module="govuk-button">
-                Continue
-              </button>
+
       </form>
+      
     </div>
   </div>
 
