--- a/app/views/v1/your-registration/you-can-register-in-wales.html
+++ b/app/views/v1/your-registration/you-can-register-in-wales.html
@@ -30,9 +30,9 @@ You can register in Wales
             You can register in Wales
           </h1>
         </legend>
-        
+
           <p>You can continue to renew in England, but you’re encouraged to register with the appropriate authority for your region. This allows customers to verify that you are a registered waste carrier.</p>
-          <p>In Wales you need to register with Natural Resources Wales (NRW). For details on how, visit Register or renew as a waste carrier, broker or dealer (Wales).</p>
+          <p>In Wales you need to register with Natural Resources Wales (NRW). For details on how, visit <a href="https://www.gov.uk/register-as-a-waste-carrier-broker-or-dealer-wales">Register or renew as a waste carrier, broker or dealer (Wales)</a>.</p>
           <p>If you have any questions about this, please contact our helpline on 03708 506 506.</p>
 
 
