scotland and northern island pages updated to include links

--- a/app/views/v1/your-registration/you-can-register-in-northern-ireland.html
+++ b/app/views/v1/your-registration/you-can-register-in-northern-ireland.html
@@ -33,7 +33,7 @@ You can register in Northern Ireland
      </legend>
 
           <p>You can continue to renew in England, but you’re encouraged to register with the appropriate authority for your region. This allows customers to verify that you are a registered waste carrier.</p>
-          <p>In Northern Ireland, you need to register with the Northern Ireland Environment Agency (NIEA). For details on how, visit Register or renew as a waste carrier, broker or dealer (Northern Ireland).</p>
+          <p>In Northern Ireland, you need to register with the Northern Ireland Environment Agency (NIEA). For details on how, visit <a href="https://www.gov.uk/waste-carrier-or-broker-registration-northern-ireland">Register or renew as a waste carrier, broker or dealer (Northern Ireland).</a></p>
           <p>If you have any questions about this, please contact our helpline on 03708 506 506.</p>
 
 
