--- a/app/views/v1/your-registration/you-can-register-in-scotland.html
+++ b/app/views/v1/your-registration/you-can-register-in-scotland.html
@@ -32,7 +32,7 @@ You can register in Scotland
        </h1>
      </legend>
           <p>You can continue to renew in England, but you’re encouraged to register with the appropriate authority for your region. This allows customers to verify that you are a registered waste carrier.</p>
-          <p>In Scotland you need to register with the Scottish Environment Protection Agency (SEPA). For details on how, visit Register or renew as a waste carrier or broker (Scotland).</p>
+          <p>In Scotland you need to register with the Scottish Environment Protection Agency (SEPA). For details on how, visit <a href="https://www.gov.uk/waste-carrier-or-broker-registration-scotland">Register or renew as a waste carrier or broker (Scotland)</a>.</p>
           <p>If you have any questions about this, please contact our helpline on 03708 506 506.</p>
 
 
