--- a/app/views/v1/wcr-magic-link/email-renew.html
+++ b/app/views/v1/wcr-magic-link/email-renew.html
@@ -107,7 +107,7 @@
                                 <p style="margin:20px 0 20px 0; font-size:19px; line-height:25px; color:#0B0C0C">
                                     Environment Agency<br />
                                     Telephone 03708 506 506, Monday to Friday (8am to 6pm)<br />
-                                    <a href="nccc-carrierbroker@environment-agency.gov.uk" style="word-wrap:break-word; color:#005ea5" target="_blank" rel="noopener noreferrer">
+                                    <a href="mailto:nccc-carrierbroker@environment-agency.gov.uk" style="word-wrap:break-word; color:#005ea5" target="_blank" rel="noopener noreferrer">
                                         nccc-carrierbroker@environment-agency.gov.uk</a>
                                 </p>
                                 <p style="margin:0 0 20px 0; font-size:19px; line-height:25px; color:#0B0C0C">
