--- a/app/views/v1/your-registration/start-page.html
+++ b/app/views/v1/your-registration/start-page.html
@@ -151,7 +151,7 @@
 
 
 				</article>
-		<section>
+			</section>
 			<br/>			
 		<section id="otherapply">
 				<article>
@@ -166,7 +166,7 @@
 					</div>
 
 				</article>
-		<section>
+			</section>
 
 
 							</div>
