--- a/app/views/v1/your-registration/start-page.html
+++ b/app/views/v1/your-registration/start-page.html
@@ -136,7 +136,7 @@
 
 
 									<p><a href="mailto:nccc-carrierbroker@environment-agency.gov.uk">nccc-carrierbroker@environment-agency.gov.uk</a><br/>
-									Telephone: 03708 506 506<br/>
+									testTelephone: 03708 506 506<br/>
 									Telephone from outside the UK: +44 (0) 114 282 5312<br/>
 									Monday to Friday, 8am to 6pm<br/>
 									<a href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
@@ -147,7 +147,8 @@
 					<br/>			
 				<section id="otherapply">
 						<article>
-							<div style="border-left:0.75px solid#bfc1c3; padding-left:20px;line-height:-23.25em;">
+
+							<div style="border-left:1px solid#bfc1c3; padding-left:15px; line-height:-23.25em;">
 
 								<p>Environment Agency general enquiries<br/>
 									National Customer Contact Centre<br/>
