--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -18,3 +18,135 @@ $govuk-assets-path: '/govuk/assets/';
 @import "components/cookie-banner";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+.blue-box{
+    background: #005ea5;
+    padding:1em;
+    margin-bottom:45px;
+    font-size: 16px;
+    line-height: 1.25;
+    color:#FFFFFF;
+
+      p,a{color:#FFFFFF;}
+      span{font-weight:normal;}
+
+
+  }
+
+  .grey-box{
+    background: #dee0e2;
+    padding:1em;
+    margin-bottom:45px;
+    font-size: 19px;
+
+  }
+
+  .email-banner {
+    background: #0b0c0c;
+  }
+
+  .totalCost{font-weight:bold;}
+
+  #completeLink{
+    display:inline-block;
+    font-size: 18px;
+    padding:9px 0 0 1em;
+  }
+
+
+#upload{
+  padding:1em 0;
+  margin:1em 0 2em 0;
+  border:2px solid #000;
+  padding:1em;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.form-uploader #upload{
+  border:none;
+  padding:0;
+  margin:0;
+  font-weight:bold;
+}
+
+.form-uploader{
+  border:2px solid #000;
+  padding:1em;
+}
+
+#uploadForm input[type="file"]::-webkit-file-upload-button{
+    font-size:18px;
+    padding:0.5rem 1rem;
+    background:#dee0e2;
+    color:#000
+}
+#uploadForm input[type=file]:hover,#uploadForm input[type=file]::-webkit-file-upload-button:hover{
+    cursor:pointer
+}
+
+.form-hint-upload{
+  margin-bottom:0;
+}
+
+.upload_head{
+  font-weight:bold;
+  margin-bottom:0;
+}
+
+// MCP guidance ######################
+
+#mcp-contents-list{
+  margin-bottom: 2em;
+}
+
+.mcp-contents-head{
+  margin-bottom:0.5em;
+}
+
+.govuk-section-break--visible {
+    margin-bottom: 1em;
+}
+label.permitItem{
+  margin-bottom:10px;
+}
+
+// Choose permit radio button list
+.permitSelector {
+  float: none;
+}
+
+label.permitItem {
+  display: inline-block;
+  width:100%;
+    span.permitName {
+      width: 66.66667%;
+      float: left;
+        }
+    span.permitCode {
+      width: 33.33333%;
+      font-weight: bold;
+      text-align:right;
+      float: right;
+        }
+}
+
+.table-no-border {
+  border-bottom: none;
+  padding-bottom: 0
+}
+
+// Fix to stop scroll bars appearing on textareas in IE
+textarea {
+  overflow: auto;
+}
+
+.table-bordered {
+  border: 1px solid #bfc1c3;
+  padding: 10px 20px 10px 10px;
+}
+
+.contact {
+    border-left:1px solid #bfc1c3;
+    padding-left:15px;
+    line-height:-23.25em;
+}
