div styles into class on start page continued style fix

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -150,3 +150,9 @@ textarea {
     padding-left:15px;
     line-height:-23.25em;
 }
+
+.related {
+    border-top:2px solid #1d70b8; 
+    padding-top:20px;
+    line-height:-23.25em;
+}
