--- a/app/views/v1/your-registration/start-page.html
+++ b/app/views/v1/your-registration/start-page.html
@@ -165,7 +165,7 @@
 						</div>
 
 						<div class="govuk-grid-column-one-third">
-							<div style="border-top:2px solid#1d70b8; padding-top:20px;line-height:-23.25em;">
+							<div class="related">
 
 							<h3 class="govuk-heading-s">Related content</h3>
 								<p class="govuk-body govuk-!-font-size-16"><a href="#">Register or renew as a waste carrier, broker or dealer (Wales)</a></p>
