--- a/app/views/v1/your-registration/choose-country.html
+++ b/app/views/v1/your-registration/choose-country.html
@@ -15,7 +15,7 @@
     </span>
   </p>
 </div>
-<!--<a href="javascript:history.back();" class="govuk-back-link">Back</a>-->
+<a href="javascript:history.back();" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
 
@@ -46,7 +46,7 @@
                                         </div>
                                 </details>
                     </fieldset>
-                    
+
          <fieldset class="govuk-fieldset">
                 <!--<legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                   <h1 class="govuk-fieldset__heading">
