--- a/app/views/v1/your-registration/start-page.html
+++ b/app/views/v1/your-registration/start-page.html
@@ -15,12 +15,13 @@
     </span>
   </p>
 </div>
+<a href="javascript:history.back();" class="govuk-back-link">Back</a>
 
 {% endblock %}
 {% block content %}
 
 
-	
+
 			<div class="govuk-grid-row">
 				<div class="govuk-grid-column-two-thirds">
 						<span class="govuk-caption-xl">Licence</span>
@@ -135,7 +136,7 @@
 							<div class="contact">
 
 									<p><a href="mailto:nccc-carrierbroker@environment-agency.gov.uk">nccc-carrierbroker@environment-agency.gov.uk</a><br/>
-									testTelephone: 03708 506 506<br/>
+									Telephone: 03708 506 506<br/>
 									Telephone from outside the UK: +44 (0) 114 282 5312<br/>
 									Monday to Friday, 8am to 6pm<br/>
 									<a href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
