--- a/app/views/v1/your-registration/wc-number.html
+++ b/app/views/v1/your-registration/wc-number.html
@@ -15,7 +15,7 @@ What’s your waste carrier registration number?
     </span>
   </p>
 </div>
-      <!--<a href="javascript:history.back();" class="govuk-back-link">Back</a>-->
+      <a href="javascript:history.back();" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
 
