--- a/app/views/v1/your-registration/you-can-register-in-wales.html
+++ b/app/views/v1/your-registration/you-can-register-in-wales.html
@@ -15,7 +15,7 @@ You can register in Wales
     </span>
   </p>
 </div>
-      <!--<a href="javascript:history.back();" class="govuk-back-link">Back</a>-->
+      <a href="javascript:history.back();" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
 
