--- a/app/views/v1/your-registration/registration-holder.html
+++ b/app/views/v1/your-registration/registration-holder.html
@@ -22,7 +22,7 @@ What type of business or organisation are you?
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="{{formAction}}" method="post">
+      <form action="/{{folder}}/your-registration/registration-type" method="post">
 
                 <div class="govuk-form-group">
 
