--- a/app/views/v1/wcr-magic-link/email-renew.html
+++ b/app/views/v1/wcr-magic-link/email-renew.html
@@ -1,138 +1,81 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+{% extends "layout_unbranded.html" %}
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <style type="text/css">
-        <!--
-        body {
-            margin: 0 !important
-        }
-        -->
-    </style>
+{% set imgpath="/public/images/" %}
+
+{% block page_title %}
+  Gmail | Environmental permit application
+{% endblock %}
+
+{% block proposition_header %}
+  <!-- blank to remove the proposition header -->
+{% endblock %}
+
+{% block header_class %}
+  <!-- blank to remove the proposition header -->
+{% endblock %}
+
+{% block main %}
 
 
-</head>
+<div id="email">
 
-<body style="font-family:Helvetica,Arial,sans-serif; font-size:16px; margin:0; color:#0b0c0c" fpstyle="1" ocsi="0">
-    <div style="direction: ltr;font-family: Arial;color: #000000;font-size: 12pt;">
+<div id="gmail_header">
+  <img src="{{ imgpath }}gmail_header.png" alt="" />
+</div>
 
-        <div style="font-family: Times New Roman; color: #000000; font-size: 16px">
+<div class="govuk-grid-row">
 
-            <div>
-                <table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse; min-width:100%; width:100%!important">
-                    <tbody>
-                        <tr>
-                            <td width="100%" height="53" bgcolor="#0b0c0c">
-                                <table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse; max-width:580px">
-                                    <tbody>
-                                        <tr>
-                                            <td width="70" bgcolor="#0b0c0c" valign="middle">
-                                                <a href="https://www.gov.uk" style="text-decoration:none" target="_blank" rel="noopener noreferrer">
-                                                    <table cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse">
-                                                        <tbody>
-                                                            <tr>
-                                                                <td style="padding-left:30px"><img src="https://static.notifications.service.gov.uk/images/gov.uk_logotype_crown.png" alt="" style="margin-top:4px" height="32" border="0">
-                                                                </td>
-                                                                <td style="font-size:28px; line-height:1.315789474; margin-top:4px; padding-left:10px">
-                                                                    <span style="font-family:Helvetica,Arial,sans-serif; font-weight:700; color:#ffffff; text-decoration:none; vertical-align:top; display:inline-block">GOV.UK</span>
-                                                                </td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-
-                <!-- WRAPPER FOR OUTLOOK USING OFFICE RENDERER -->
-                <!--[if mso]>
-                <table cellpadding="0" cellspacing="0" border="1" style="padding:0px;margin:0px;width:580px;" width="580">
-                    <tr>
-                        <td style="padding:0px;margin:0px;" width="580">
-                <![endif]-->
-
-                <table class="content" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:collapse; max-width:580px; width:100%!important">
-                    <tbody>
-                        <tr>
-                            <td width="10" height="10" valign="middle"></td>
-                            <td>
-                                <table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse">
-                                    <tbody>
-                                        <tr>
-                                            <td bgcolor="#005EA5" width="100%" height="10"></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </td>
-                            <td width="10" valign="middle" height="10"></td>
-                        </tr>
-                    </tbody>
-                </table>
-                <table class="content" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:collapse; max-width:580px; width:100%!important">
-                    <tbody>
-                        <tr>
-                            <td width="10" valign="middle">
-                                <br>
-                            </td>
-                            <td style="font-family:Helvetica,Arial,sans-serif; font-size:19px; line-height:1.315789474; max-width:560px">
-                                <p style="margin:30px 0 20px 0; font-size:19px; line-height:25px; color:#0B0C0C">Dear Chris Jones</p>
-
-                                <h2 style="margin:0 0 20px 0; padding:0; font-size:27px; line-height:35px; font-weight:bold; color:#0B0C0C">
-                                    Renew your waste carrier registration by 15 June 2020</h2>
-                                <p style="margin:0 0 20px 0; font-size:19px; line-height:25px; color:#0B0C0C">
-                                    It costs £105 and lasts for 3 years.
-                                </p>
-                                <p style="margin:0 0 20px 0; font-size:19px; line-height:25px; color:#0B0C0C; font-weight:bold;">
-                                    You can renew online in a few minutes at:
-                                    <a href="/v1/your-registration/about-to-renew.html" style="word-wrap:break-word; color:#005ea5" target="_blank" rel="noopener noreferrer">
-                                      wastecarriersregistration.service.gov.uk/renew/782gkd57bdjs84hf</a>
-                                </p>
-                                <p style="margin:0 0 20px 0; font-size:19px; line-height:25px; color:#0B0C0C">
-                                    Licence number: CBDU12345
-                                </p>
-                                <p style="margin:0 0 20px 0; font-size:19px; line-height:25px; color:#0B0C0C">
-                                    If you no longer need a licence, you can ignore these reminders. You cannot transport, buy, sell or dispose of waste without a licence.
-                                </p>
-                                <div style="font-family:Arial;max-width:600px;">
-                                    <div style="margin-top:30pt;margin-bottom:10pt;">
-                                        <img width="200" height="57" alt="" src="/public/images/ea_logo_sm.png">
-                                    </div>
-                                </div>
-                                <p style="margin:20px 0 20px 0; font-size:19px; line-height:25px; color:#0B0C0C">
-                                    Environment Agency<br />
-                                    Telephone 03708 506 506, Monday to Friday (8am to 6pm)<br />
-                                    <a href="mailto:nccc-carrierbroker@environment-agency.gov.uk" style="word-wrap:break-word; color:#005ea5" target="_blank" rel="noopener noreferrer">
-                                        nccc-carrierbroker@environment-agency.gov.uk</a>
-                                </p>
-                                <p style="margin:0 0 20px 0; font-size:19px; line-height:25px; color:#0B0C0C">
-                                    This is an automated email, please do not reply.
-                                </p>
-                            </td>
-                            <td width="10" valign="middle">
-                                <br>
-                            </td>
-                        </tr>
-
-                    </tbody>
-                </table>
-
-                <!-- END WRAPPER -->
-                <!--[if mso]>
-                        </td>
-                    </tr>
-                  </table>
-                <![endif]-->
-
-            </div>
-        </div>
+    <div style="width:15%" class="govuk-grid-column-one-quarter">
+        <img style="margin-bottom:600px" src="{{ imgpath }}gmail_menu_left.png" alt="" />
     </div>
 
-</body>
 
-</html>
+    <div class="govuk-grid-column-one-half">
+
+      <p class="subject">
+        Renew your waste carrier registration by 15 June 2020 <img class="inboxicon" src="{{ imgpath }}gmail_icon_inbox.png" alt="" />
+      </p>
+
+      <p class="from">
+        <img src="{{ imgpath }}gmail_from_text.png" alt="" />
+      </p>
+
+      <div id="email_text">
+
+        <div id="banner" class="email-banner"><img src="{{ imgpath }}gov_uk_email_header.png" alt="GOV.UK" /></div>
+      </br>
+<p>Dear Chris Jones,</p>
+        <h1 class="govuk-heading-m">
+          Renew your waste carrier registration by 15 June 2020
+        </h1>
+        <p>It costs £105 and lasts for 3 years.
+        </p>
+        <h2 class="govuk-heading-s">You can renew online in a few minutes at:</br>
+        <a href="/v1/your-registration/about-to-renew.html">wastecarriersregistration.service.gov.uk/renew/782gkd57bdjs84hf</a>
+      </h2>
+
+      <p>Licence number: CBDU12345</br></br>
+
+        If you no longer need a licence, you can ignore these reminders. You cannot transport, buy, sell or dispose of waste without a licence.</p></br>
+
+        <p><img width="200" height="57" alt="" src="/public/images/ea_logo_sm.png"></p>
+                                           
+      </br>
+<p>Environment Agency</br>
+  Telephone 03708 506 506, Monday to Friday (8am to 6pm)</br>
+  <a href="mailto:nccc-carrierbroker@environment-agency.gov.uk">nccc-carrierbroker@environment-agency.gov.uk</a></br>      </br>
+  
+  This is an automated email, please do not reply.</p>
+
+
+
+
+      </div><!-- // end #email_text -->
+
+    </div><!-- // end .column 3/4 -->
+
+  </div><!-- // end .grid_row -->
+
+</div><!-- // end #email -->
+
+{% endblock %}
