email receipt page

--- a/app/views/v1/wcr-magic-link/email-renew.html
+++ b/app/views/v1/wcr-magic-link/email-renew.html
@@ -3,7 +3,7 @@
 {% set imgpath="/public/images/" %}
 
 {% block page_title %}
-  Gmail | Environmental permit application
+  Gmail | Renew your waste carrier registration by 15 June 2020
 {% endblock %}
 
 {% block proposition_header %}
