finishing email for receipt for payment and updating email links to opens new tab, updating sass and imgs for new email

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -42,6 +42,7 @@ $govuk-assets-path: '/govuk/assets/';
 
   .email-banner {
     background: #0b0c0c;
+    max-width: 80%;
   }
 
   .totalCost{font-weight:bold;}
