--- a/app/views/v1/wcr-magic-link/email-renew.html
+++ b/app/views/v1/wcr-magic-link/email-renew.html
@@ -51,7 +51,7 @@
         <p>It costs £105 and lasts for 3 years.
         </p>
         <h2 class="govuk-heading-s">You can renew online in a few minutes at:</br>
-        <a href="/v1/your-registration/about-to-renew.html">wastecarriersregistration.service.gov.uk/renew/782gkd57bdjs84hf</a>
+        <a href="/v1/your-registration/about-to-renew.html" target="_blank">wastecarriersregistration.service.gov.uk/renew/782gkd57bdjs84hf</a>
       </h2>
 
       <p>Licence number: CBDU12345</br></br>
