testing pdf download

--- a/app/views/v1/wcr-magic-link/email-receipt.html
+++ b/app/views/v1/wcr-magic-link/email-receipt.html
@@ -44,7 +44,8 @@
     </div>
     <div class="govuk-grid-column-one-quarter">
       <div id="email_text">
-        <a href="/payment-reciept" target="_blank">
+        <a href="https://waste-carriers.herokuapp.com/public/images/payment-receipt.pdf">
+          
        <img src="{{ imgpath }}pdf-icon.png" style="max-width: 80%;" alt="GOV.UK" />
       </a>
     </div>
