added payment receipt to index page, created confirm page for BACS payment, linking to payment recieved email and attachment

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -111,6 +111,13 @@ label.permitItem{
   margin-bottom:10px;
 }
 
+
+
+.govuk-panel--confirmation2 {
+  color: #ffffff;
+  background: #1E70B8;
+}
+
 // Choose permit radio button list
 .permitSelector {
   float: none;
