--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -32,6 +32,11 @@ Waste carrier or broker prototype
             {{ macros.list( "WCR registration", "/v1/your-registration/start-page" ) }}
           </ul>
 
+          <ul class="govuk-list govuk-list--bullet">
+            {{ macros.list( "WCR payment receipt", "/v1/your-registration/done/bacs-confirm" ) }}
+          </ul>
+          
+
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <!-- ########################################################################### -->
     
