--- a/app/views/v1/wcr-magic-link/email-receipt.html
+++ b/app/views/v1/wcr-magic-link/email-receipt.html
@@ -44,8 +44,8 @@
     </div>
     <div class="govuk-grid-column-one-quarter">
       <div id="email_text">
-        <a href="https://waste-carriers.herokuapp.com/public/images/payment-receipt.pdf">
-          
+        <a href="https://waste-carriers.herokuapp.com{{ imgpath }}payment-receipt.pdf" target="_blank" download="Payment receipt">
+         
        <img src="{{ imgpath }}pdf-icon.png" style="max-width: 80%;" alt="GOV.UK" />
       </a>
     </div>
