BACS pay email and payment summary and confirm bacs screens

--- a/app/views/v1/wcr-magic-link/email-receipt.html
+++ b/app/views/v1/wcr-magic-link/email-receipt.html
@@ -76,7 +76,7 @@
           </p>
         <h2 class="govuk-heading-s">Receipt:</br>
       </h2>
-      <p>Receipt for [registration/renewal] as a waste carrier, broker or dealer
+      <p>Receipt for renewal as a waste carrier, broker or dealer
       </p>
 
       
@@ -89,7 +89,7 @@
           Acme Really Long Business Name Limited
           Acme House, Acme Trading Estate, Really Long Town Name, Newtown NN1 3WW</p>
                        
-        <h2 class="govuk-heading-s">Paid on 23 October 2020 by [bank transfer/card payment]</h2>
+        <h2 class="govuk-heading-s">Paid on 23 October 2020 by bank transfer</h2>
         <p>Payment reference: CBDU123456</p>
         <div class="govuk-section-break govuk-section-break--visible"></div>
 
@@ -98,7 +98,7 @@
           <tbody>
              
             <tr>
-              <td>Cost of [registration/renewal]</td>
+              <td>Cost of renewal</td>
               <td>£115.00</td>
             </tr>
             <tr>
@@ -106,7 +106,7 @@
               <td style="padding-top: 10px;">£40.00</td>
             </tr>
             <tr>
-              <td style="padding-top: 10px;">Cost of registration [card/s]</td>
+              <td style="padding-top: 10px;">Cost of registration card</td>
               <td style="padding-top: 10px;">£5.00</td>
             </tr>
               <td style="padding-top: 10px;"><span style="font-weight: bold">Total paid</span></td>
