--- a/app/views/v1/your-registration/done/bacs-confirm.html
+++ b/app/views/v1/your-registration/done/bacs-confirm.html
@@ -134,7 +134,9 @@ What type of business or organisation are you?
           <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
         </p>
       </br>      </br>      </br>      </br>      </br>
-        <p><a href="/{{folder}}/wcr-magic-link/email-receipt">Testing link to email</a></p>
+      <p><a href="/{{folder}}/wcr-magic-link/bacs-email" target="_blank">Testing link to pay by BACS email</a></p>
+
+        <p><a href="/{{folder}}/wcr-magic-link/email-receipt" target="_blank">Testing link to payment received email</a></p>
 
       </div>
 
