--- a/app/views/v1/your-registration/new-registration.html
+++ b/app/views/v1/your-registration/new-registration.html
@@ -54,9 +54,8 @@ items: [
 </div>
 
     <p>
-      When you apply for a permit you will need to give us some personal data such as your email address or date of birth.</p>
-     
-     <p><a href="/{{folder}}/pages/privacy" target="_blank">Privacy: how we use your personal information (opens new tab)</a>
+      When you apply for a permit you will need to give us some personal data such as your email address or date of birth.<br>
+      <a href="/{{folder}}/pages/privacy" target="_blank">Privacy: how we use your personal information (opens new tab)</a>
     </p>
 
     <div class="govuk-form-group">
