--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -35,6 +35,11 @@ Waste carrier or broker prototype
           <ul class="govuk-list govuk-list--bullet">
             {{ macros.list( "WCR payment receipt", "/v1/your-registration/done/bacs-confirm" ) }}
           </ul>
+
+          <ul class="govuk-list govuk-list--bullet">
+            {{ macros.list( "BACS from payment summary", "/v1/your-registration/pay/choose-payment" ) }}
+          </ul>
+          
           
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
