adding renewal note against testing links text

--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -33,11 +33,11 @@ Waste carrier or broker prototype
           </ul>
 
           <ul class="govuk-list govuk-list--bullet">
-            {{ macros.list( "WCR payment receipt", "/v1/your-registration/done/bacs-confirm" ) }}
+            {{ macros.list( "WCR renewal payment receipt", "/v1/your-registration/done/bacs-confirm" ) }}
           </ul>
 
           <ul class="govuk-list govuk-list--bullet">
-            {{ macros.list( "BACS from payment summary", "/v1/your-registration/pay/choose-payment" ) }}
+            {{ macros.list( "BACS renewal from payment summary", "/v1/your-registration/pay/choose-payment" ) }}
           </ul>
           
           
