updated country pages form actions to match off site url content links, updated index page to link to new tab for email test link, updated your registration page for paragraph spacing on privacy link, updated macro alt tag to wcr instead of wex

--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -26,7 +26,7 @@ Waste carrier or broker prototype
             Current research
           </h2>
           <ul class="govuk-list govuk-list--bullet">
-            {{ macros.list( "WCR magic link renewal", "/v1/wcr-magic-link/email-renew" ) }}
+            <li><a href="/{{versionxxx}}/wcr-magic-link/email-renew" target="_blank">WCR magic link renewal</a> <span style="margin-top:12pt;margin-bottom:0pt;border-left:8px">/v1/wcr-magic-link/email-renew</span></li>
           </ul>
           <ul class="govuk-list govuk-list--bullet">
             {{ macros.list( "WCR registration", "/v1/your-registration/start-page" ) }}
@@ -39,7 +39,6 @@ Waste carrier or broker prototype
           <ul class="govuk-list govuk-list--bullet">
             {{ macros.list( "BACS renewal from payment summary", "/v1/your-registration/pay/choose-payment" ) }}
           </ul>
-          
           
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
