--- a/app/views/v1/your-registration/you-can-register-in-northern-ireland.html
+++ b/app/views/v1/your-registration/you-can-register-in-northern-ireland.html
@@ -24,7 +24,7 @@ You can register in Northern Ireland
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="{{formAction}}" method="post">
+    <form action="https://www.gov.uk/waste-carrier-or-broker-registration-northern-ireland"" method="post">
 
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
         <h1 class="govuk-fieldset__heading">
