--- a/app/views/includes/macros.html
+++ b/app/views/includes/macros.html
@@ -23,5 +23,5 @@
 {% endmacro %}
 
 {% macro list( text, url ) %}
-  <li><a href="{{url}}">{{text}}</a> <span class="wex-url">{{url}}</span></li>
+  <li><a href="{{url}}">{{text}}</a> <span class="wcr-url">{{url}}</span></li>
 {% endmacro %}
