--- a/app/views/v1/your-registration/you-can-register-in-wales.html
+++ b/app/views/v1/your-registration/you-can-register-in-wales.html
@@ -24,7 +24,7 @@ You can register in Wales
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="{{formAction}}" method="post">
+    <form action="https://www.gov.uk/register-as-a-waste-carrier-broker-or-dealer-wales" method="post">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
            <h1 class="govuk-fieldset__heading">
             You can register in Wales
