updating dates codes and costs to match across payment pages and email and downloadable receipt

--- a/app/views/v1/your-registration/done/bacs-confirm.html
+++ b/app/views/v1/your-registration/done/bacs-confirm.html
@@ -29,12 +29,12 @@ What type of business or organisation are you?
           <div class="govuk-panel__body">
             Then email us your registration number:
 
-            <br><strong>HDJ2123F</strong>
+            <br><strong>CBDU311567</strong>
           </div>
         </div>
 
         <div class="govuk-inset-text">
-          We cannot register you until your payment clears.
+          We cannot renew your registration you until your payment is processed.
         </div>
         <h2 class="govuk-heading-m">Bank details</h2>
         <table class="govuk-table">
@@ -48,12 +48,12 @@ What type of business or organisation are you?
               <th scope="row" class="govuk-table__header">10014411</th>
             </tr>
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell">Payment reference</br><span style="color: grey;">We cannot complete your registration without this</span></td>
-              <th scope="row" class="govuk-table__header">CBDU130776</th>
+              <td class="govuk-table__cell">Payment reference</br><span style="color: grey;">We cannot renew your registration without this</span></td>
+              <th scope="row" class="govuk-table__header">CBDU311567</th>
             </tr>
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">Payment due</td>
-              <th scope="row" class="govuk-table__header">£ 164.00
+              <th scope="row" class="govuk-table__header">£ 160.00
               </th>
             </tr>
           </tbody>
@@ -72,7 +72,7 @@ What type of business or organisation are you?
   </p>          </div>
         </details>
 
-        <h2 class="govuk-heading-m">Email us your registration number CBDU130776 to confirm you’ve paid</h2>
+        <h2 class="govuk-heading-m">Email us your registration number CBDU311567 to confirm you’ve paid</h2>
 
         <table class="govuk-table">
           <tbody class="govuk-table__body">
@@ -103,15 +103,15 @@ What type of business or organisation are you?
   <span style="font-weight: bold">Email body:</span></br> 
   Payment confirmation reference: CBDU130776
   Date paid: 
-  Amount: £154.00
+  Amount: £160.00
   </p>          </div>
         </details>
 
         <p class="govuk-body">
-          We’ve sent an email to jane.applicant@email.com with the payment details and instructions.
+          We’ve sent an email to jane.applicant@email.com with your payment details and instructions.
         </p>
         <p class="govuk-body">
-          We will also send a receipt to the same email address once payment is received.
+          We will also send a receipt to the same email address once payment is processed.
         </p>
 
 
