--- a/app/views/v1/your-registration/pay/choose-payment.html
+++ b/app/views/v1/your-registration/pay/choose-payment.html
@@ -32,15 +32,19 @@ Payment summary
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">Renewal of registration</th>
-            <td class="govuk-table__cell">£105.00</td>
+            <td class="govuk-table__cell">£115.00</td>
+          </tr>
+          <tr>
+            <td style="padding-top: 10px;">Charge for changing carrier type</td>
+            <td style="padding-top: 10px;">£40.00</td>
           </tr>
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell">2 registration cards</th>
-            <td class="govuk-table__cell">£10.00</td>
+            <td class="govuk-table__cell">1 registration card</th>
+            <td class="govuk-table__cell">£5.00</td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">Total charge</th>
-            <td class="govuk-table__cell">£115.00</td>
+            <td class="govuk-table__cell">£160.00</td>
           </tr>
           <tr class="govuk-table__row">
             <td style="padding-top:10px">All charges are outside the scope of VAT.</th>
