worldpay receipt for payment flow added to testing list inc new done page and update seperate versions of payment email and attachment. Collated pages with session data includes will be next iteration prototype but possibly not built and tested in time for test, so for now just having duplicate updated pages

--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -33,7 +33,11 @@ Waste carrier or broker prototype
           </ul>
 
           <ul class="govuk-list govuk-list--bullet">
-            {{ macros.list( "WCR renewal payment receipt", "/v1/your-registration/done/bacs-confirm" ) }}
+            {{ macros.list( "WCR renewal BACS payment receipt", "/v1/your-registration/done/bacs-confirm" ) }}
+          </ul>
+
+          <ul class="govuk-list govuk-list--bullet">
+            {{ macros.list( "WCR renewal card payment receipt", "/v1/your-registration/done/worldpay-confirm" ) }}
           </ul>
 
           <ul class="govuk-list govuk-list--bullet">
