--- a/app/views/v1/your-registration/done/bacs-confirm.html
+++ b/app/views/v1/your-registration/done/bacs-confirm.html
@@ -29,7 +29,7 @@ What type of business or organisation are you?
           <div class="govuk-panel__body">
             Then email us your registration number:
 
-            <br><strong>CBDU311567</strong>
+            <br><strong>CBDU130776</strong>
           </div>
         </div>
 
@@ -49,7 +49,7 @@ What type of business or organisation are you?
             </tr>
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">Payment reference</br><span style="color: grey;">We cannot renew your registration without this</span></td>
-              <th scope="row" class="govuk-table__header">CBDU311567</th>
+              <th scope="row" class="govuk-table__header">CBDU130776</th>
             </tr>
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">Payment due</td>
@@ -72,7 +72,7 @@ What type of business or organisation are you?
   </p>          </div>
         </details>
 
-        <h2 class="govuk-heading-m">Email us your registration number CBDU311567 to confirm you’ve paid</h2>
+        <h2 class="govuk-heading-m">Email us your registration number CBDU130776 to confirm you’ve paid</h2>
 
         <table class="govuk-table">
           <tbody class="govuk-table__body">
@@ -101,8 +101,8 @@ What type of business or organisation are you?
 </p>
 <p></p>
   <span style="font-weight: bold">Email body:</span></br> 
-  Payment confirmation reference: CBDU130776
-  Date paid: 
+  Payment confirmation reference: CBDU130776</br>
+  Date paid: </br>
   Amount: £160.00
   </p>          </div>
         </details>
