--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -28,6 +28,15 @@ Waste carrier or broker prototype
           <ul class="govuk-list govuk-list--bullet">
             <li><a href="/{{versionxxx}}/wcr-magic-link/email-renew" target="_blank">WCR magic link renewal</a> <span style="margin-top:12pt;margin-bottom:0pt;border-left:8px">/v1/wcr-magic-link/email-renew</span></li>
           </ul>
+          <ul class="govuk-list govuk-list--bullet"> 
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/magic-link.pdf" target="_blank" download="Payment receipt">Renewal letter magic link</a> https://waste-carriers.herokuapp.com/public/images/magic-link.pdf</li>
+          </ul>
+          <ul class="govuk-list govuk-list--bullet">    
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/redirect.pdf" target="_blank" download="Payment receipt">Renewal letter redirect</a> https://waste-carriers.herokuapp.com/public/images/redirect.pdf</li>
+          </ul>
+          <ul class="govuk-list govuk-list--bullet"> 
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/qr-code.pdf" target="_blank" download="Payment receipt">Renewal letter redirect and QR code</a> https://waste-carriers.herokuapp.com/public/images/pqr-code.pdf</li>
+          </ul>
           <ul class="govuk-list govuk-list--bullet">
             {{ macros.list( "WCR registration", "/v1/your-registration/start-page" ) }}
           </ul>
