updated banner from alpha to beta across all pages, and resolved bugs highlighted in jira ticket 1117 - back button removed from magic link landing page, registrstion/renew page updated, done page background colour updated, hint text updated in choose payment page, the word licence swapped with registration on your-registration/check-details page

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -118,6 +118,13 @@ label.permitItem{
   background: #1E70B8;
 }
 
+.govuk-panel--confirmation3 {
+  color: #ffffff;
+  background: #28A197;
+}
+
+
+
 // Choose permit radio button list
 .permitSelector {
   float: none;
