--- a/app/views/v1/your-registration/check-details.html
+++ b/app/views/v1/your-registration/check-details.html
@@ -7,7 +7,7 @@
 {% block beforeContent %}
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
-  alpha
+  beta
 </strong>
     <span class="govuk-phase-banner__text">
       This is a new service – your
@@ -24,7 +24,7 @@
           <fieldset class="govuk-fieldset govuk-!-margin-bottom-9">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-0">
-                You are about to renew your waste carrier licence
+                You are about to renew your waste carrier registration
               </h1>
             </legend>
             <table class="govuk-table">
