--- a/app/views/v1/your-registration/new-registration.html
+++ b/app/views/v1/your-registration/new-registration.html
@@ -7,7 +7,7 @@ Is this a new registration?
 {% block beforeContent %}
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
-  alpha
+  beta
 </strong>
     <span class="govuk-phase-banner__text">
       This is a new service – your
@@ -53,8 +53,7 @@ items: [
 
 </div>
 
-    <p>
-      When you apply for a permit you will need to give us some personal data such as your email address or date of birth.</p>
+
       <p> <a href="/{{folder}}/pages/privacy" target="_blank">Privacy: how we use your personal information (opens new tab)</a>
     </p>
 
