--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -5,7 +5,19 @@ Waste carrier or broker prototype
 {% endblock %}
 
 {% set versionxxx = "v1" %}
+{% block beforeContent %}
+<div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
+  beta
+</strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your
+      <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
 
+{% endblock %}
 {% block content %}
 
   <div class="govuk-grid-row">
