--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,12 +2,12 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Waste carrier or broker prototype
+  Register as a waste carrier or broker prototype
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
-  alpha
+  beta
 </strong>
     <span class="govuk-phase-banner__text">
       This is a new service – your
