--- a/app/views/v1/your-registration/about-to-renew.html
+++ b/app/views/v1/your-registration/about-to-renew.html
@@ -7,7 +7,7 @@
 {% block beforeContent %}
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
-  alpha
+  beta
 </strong>
     <span class="govuk-phase-banner__text">
       This is a new service – your
@@ -15,7 +15,7 @@
     </span>
   </p>
 </div>
-<a href="javascript:history.back();" class="govuk-back-link">Back</a>
+<!--<a href="javascript:history.back();" class="govuk-back-link">Back</a>-->
 {% endblock %}
 {% block content %}
 
