--- a/app/views/v1/your-registration/done/worldpay-confirm.html
+++ b/app/views/v1/your-registration/done/worldpay-confirm.html
@@ -7,7 +7,7 @@ What type of business or organisation are you?
 {% block beforeContent %}
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
-  alpha
+  beta
 </strong>
     <span class="govuk-phase-banner__text">
       This is a new service – your
@@ -21,7 +21,7 @@ What type of business or organisation are you?
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-panel govuk-panel--confirmation">
+        <div class="govuk-panel govuk-panel--confirmation3">
           <h1 class="govuk-panel__title">
             Registration complete
           </h1>
