--- a/app/views/v1/your-registration/pay/bacs-confirm.html
+++ b/app/views/v1/your-registration/pay/bacs-confirm.html
@@ -7,7 +7,7 @@ Registration takes longer if you pay by bank transfer
 {% block beforeContent %}
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
-  alpha
+  beta
 </strong>
     <span class="govuk-phase-banner__text">
       This is a new service – your
