--- a/app/views/v1/your-registration/pay/choose-payment.html
+++ b/app/views/v1/your-registration/pay/choose-payment.html
@@ -7,7 +7,7 @@ Payment summary
 {% block beforeContent %}
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag ">
-  alpha
+  beta
 </strong>
     <span class="govuk-phase-banner__text">
       This is a new service – your
@@ -77,7 +77,7 @@ items: [
     value: "bacs",
     text: "Pay by bank transfer and then email us to confirm payment",
     hint: {
-      text: "You will be transferred to the secure WorldPay site. We accept MasterCard, Maestro and Visa."
+      text: "We cannot register you until your payment clears."
     }
   }
 
