updated renewal pages for consitant CBU number with payment pages, updated confirm renewal details to have consistant pricing list with payment, added permit dump macro script to a couple of pages to track session data, and updated some routes to run from session data, also included new page on tier selection

--- a/app/views/includes/macros.html
+++ b/app/views/includes/macros.html
@@ -25,3 +25,31 @@
 {% macro list( text, url ) %}
   <li><a href="{{url}}">{{text}}</a> <span class="wcr-url">{{url}}</span></li>
 {% endmacro %}
+
+
+{% macro radio_button(label,name,id,value,labelClass='') %}
+<div class="govuk-radios">
+  <div class="multiple-choice">
+    <div class="govuk-radios__item permitSelector">
+      <input class="govuk-radios__input" id="{{name}}_{{id}}" type="radio" name="{{name}}" value="{{ value }}">
+      <label class="govuk-radios__label{{labelClass}}" for="{{name}}_{{id}}">
+        {{ label }}
+      </label>
+    </div>
+  </div>
+</div>
+{% endmacro %}
+
+
+{% macro checkbox(label,name,id,value,labelClass='') %}
+<div class="govuk-checkboxes__item">
+    <input class="govuk-checkboxes__input" id="{{name}}_{{id}}" type="checkbox" name="{{name}}" value="{{ value }}">
+  <label class="govuk-label govuk-checkboxes__label{{labelClass}}" for="{{name}}_{{id}}">
+    {{ label }}
+  </label>
+ </div>
+{% endmacro %}
+
+{% macro hidden(name,value) %}
+  <input type="hidden" name="{{name}}" value="{{value}}">
+{% endmacro %}
