--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -27,7 +27,7 @@ Waste carrier or broker prototype
       </h1>
       {% import "includes/macros.html" as macros %}
 
-      <p><a href="/v25/cls">Clear permit data</a></p>
+      <p><a href="/prototype-admin/clear-data">Clear permit data</a></p>
       <!-- user lab -->
       <h2 class="govuk-heading-m">Prototype pages</h2>
 
