--- a/app/views/v1/your-registration/registration-type.html
+++ b/app/views/v1/your-registration/registration-type.html
@@ -42,22 +42,22 @@ What kind of registration do you need?
               <div class="govuk-radios">
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="registration-holder" name="registration-holder" type="radio" value="sole-trader">
+                      <input class="govuk-radios__input" id="tier" name="tier" type="radio" value="help-decide-tier">
                       <label class="govuk-label govuk-radios__label" for="registration-holder">
                         Help me decide
                       </label>
                     </div>
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="registration-holder-2" name="registration-holder" type="radio" value="ltd-comp">
-                      <label class="govuk-label govuk-radios__label" for="registration-holder-2">
+                      <input class="govuk-radios__input" id="tier" name="tier" type="radio" value="upper-tier">
+                      <label class="govuk-label govuk-radios__label" for="tier-2">
                         I need an upper tier registration
                       </label>
                     </div>
 
                     <div class="govuk-radios__item">
-                      <input class="govuk-radios__input" id="registration-holder-3" name="registration-holder" type="radio" value="partnership">
-                      <label class="govuk-label govuk-radios__label" for="registration-holder-3">
+                      <input class="govuk-radios__input" id="tier" name="tier" type="radio" value="lower-tier">
+                      <label class="govuk-label govuk-radios__label" for="tier-3">
                         I need a lower tier registration
                       </label>
                     </div>
