--- a/app/views/v1/your-registration/wc-number.html
+++ b/app/views/v1/your-registration/wc-number.html
@@ -26,6 +26,7 @@ What’s your waste carrier registration number?
 
     <form action="{{formAction}}" method="post">
 
+
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">
@@ -34,11 +35,11 @@ What’s your waste carrier registration number?
         </legend>
       
         <div class="govuk-form-group">
-          <label class="govuk-label" for="address-line-1">
+          <label class="govuk-label" for="registration-number">
             Waste carrier registration number<br/>
             Example: CBDU59475
           </label>
-          <input class="govuk-input govuk-!-width-one-half" id="address-line-1" name="address-line-1" type="text">
+          <input class="govuk-input govuk-!-width-one-half" id="registration-number" name="registration-number" type="text">
         </div>
       
       </fieldset>
